tested with layers_dims = [12288, 20, 7, 5, 1]  93% accuarcy but still overfiting

--- a/notebooks/03_L_layer_model.ipynb
+++ b/notebooks/03_L_layer_model.ipynb
@@ -140,7 +140,7 @@
    "outputs": [],
    "source": [
     "#layers_dims = [12288, 20, 7, 5, 1] \n",
-    "layers_dims = [12288, 64, 20, 5, 1] "
+    "layers_dims = [12288, 64, , 5, 1] "
    ]
   },
   {
@@ -285,8 +285,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f0d888c1-c55f-489e-b7ff-bfa833da5c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 0: 0.6997482480275381\n",
+      "Cost after iteration 100: 0.6741384924699683\n",
+      "Cost after iteration 200: 0.6094007272448337\n",
+      "Cost after iteration 300: 0.6032148849916655\n",
+      "Cost after iteration 400: 0.5979940844763588\n",
+      "Cost after iteration 500: 0.593288757498294\n",
+      "Cost after iteration 600: 0.5887572053603997\n",
+      "Cost after iteration 700: 0.5843336164678468\n",
+      "Cost after iteration 800: 0.5799381838670103\n",
+      "Cost after iteration 900: 0.5749674904472419\n",
+      "Cost after iteration 1000: 0.5698698579101686\n",
+      "Cost after iteration 1100: 0.5645610239021701\n",
+      "Cost after iteration 1200: 0.5588385486763775\n",
+      "Cost after iteration 1300: 0.552669995753617\n",
+      "Cost after iteration 1400: 0.5460135740749259\n",
+      "Cost after iteration 1500: 0.5387776210909023\n",
+      "Cost after iteration 1600: 0.5309011274380034\n",
+      "Cost after iteration 1700: 0.5223348511308217\n",
+      "Cost after iteration 1800: 0.5130265777568344\n",
+      "Cost after iteration 1900: 0.5028467317214917\n",
+      "Cost after iteration 2000: 0.49170815284250297\n",
+      "Cost after iteration 2100: 0.4797982640997426\n",
+      "Cost after iteration 2200: 0.48729248156832566\n",
+      "Cost after iteration 2300: 0.49374469631225926\n",
+      "Cost after iteration 2400: 0.49716600344356443\n",
+      "Cost after iteration 2500: 0.495491363512599\n",
+      "Cost after iteration 2600: 0.49156067413087584\n",
+      "Cost after iteration 2700: 0.48630984252258\n",
+      "Cost after iteration 2800: 0.4833758756136119\n",
+      "Cost after iteration 2900: 0.47729610149137763\n",
+      "Cost after iteration 2999: 0.4546340957850859\n"
+     ]
+    }
+   ],
+   "source": [
+    "layers_dims = [12288, 32, 8, 1]\n",
+    "parameters, costs = L_layer_model(train_x, Y_train_org, layers_dims,learning_rate = 0.005, num_iterations = 3000, print_cost = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "562a3f9a-f578-4aac-852e-e2f3e64bd102",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7415773353751915\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred_train = predict(train_x, Y_train_org, parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ef79840c-650b-4a0e-b526-e7c779e635ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7278287461773701\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred_test = predict(test_x, Y_test_org, parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0aef93d9-a3c3-4753-9565-18590be85cf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 0: 0.636104091418676\n",
+      "Cost after iteration 100: 0.5817297824912824\n",
+      "Cost after iteration 200: 0.5682603793620732\n",
+      "Cost after iteration 300: 0.5584356704737771\n",
+      "Cost after iteration 400: 0.5499503509074896\n",
+      "Cost after iteration 500: 0.5419398292623027\n",
+      "Cost after iteration 600: 0.5289647715143653\n",
+      "Cost after iteration 700: 0.5191224412075178\n",
+      "Cost after iteration 800: 0.5014854937019197\n",
+      "Cost after iteration 900: 0.5078403450081426\n",
+      "Cost after iteration 1000: 0.4977298868604474\n",
+      "Cost after iteration 1100: 0.48494802281877375\n",
+      "Cost after iteration 1200: 0.4826871703080125\n",
+      "Cost after iteration 1300: 0.42735344682676\n",
+      "Cost after iteration 1400: 0.4778233456725642\n",
+      "Cost after iteration 1500: 0.4341173208781856\n",
+      "Cost after iteration 1600: 0.44458053939084896\n",
+      "Cost after iteration 1700: 0.439247606573252\n",
+      "Cost after iteration 1800: 0.5873562237522952\n",
+      "Cost after iteration 1900: 0.4148386360778437\n",
+      "Cost after iteration 2000: 0.4786291706183567\n",
+      "Cost after iteration 2100: 0.5128041824956233\n",
+      "Cost after iteration 2200: 0.3697843041324529\n",
+      "Cost after iteration 2300: 0.35759389503400835\n",
+      "Cost after iteration 2400: 0.4077468697324846\n",
+      "Cost after iteration 2500: 0.31935526882967763\n",
+      "Cost after iteration 2600: 0.3276713354050588\n",
+      "Cost after iteration 2700: 0.29663006470808184\n",
+      "Cost after iteration 2800: 0.4736816795067212\n",
+      "Cost after iteration 2900: 0.30596683958486737\n",
+      "Cost after iteration 3000: 0.27790261818957707\n",
+      "Cost after iteration 3100: 0.27766850504504703\n",
+      "Cost after iteration 3200: 0.3781219853708404\n",
+      "Cost after iteration 3300: 0.32237593361088707\n",
+      "Cost after iteration 3400: 0.38780663586386444\n",
+      "Cost after iteration 3499: 0.22063541809214118\n"
+     ]
+    }
+   ],
+   "source": [
+    "layers_dims = [12288, 20, 7, 5, 1] \n",
+    "parameters, costs = L_layer_model(train_x, Y_train_org, layers_dims,learning_rate = 0.008, num_iterations = 3500, print_cost = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "172cbfde-a3a7-427a-8904-3de2b80c4392",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9345329249617154\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred_train = predict(train_x, Y_train_org, parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4d4b136c-0ef8-44eb-8d63-a68ed07ab268",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7339449541284404\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred_test = predict(test_x, Y_test_org, parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a22a5f7-9316-4d6d-8956-ad05b9f66aeb",
    "metadata": {},
    "outputs": [],
    "source": []
