to add regulazation

--- a/notebooks/03.0_with_Regularization.ipynb
+++ b/notebooks/03.0_with_Regularization.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "47ddf290-1054-484b-bed9-c2952870749b",
+   "metadata": {},
+   "source": [
+    "## as the last model has 0.934 train accuracy and 0.734 test accuracy it is clearly overfitting so I'll try regulazation first then drop out next"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40de10f6-2d3d-43dc-b901-27e813bdb6b7",
+   "id": "10cb9d3b-148c-49ff-ba63-65ca595634d1",
    "metadata": {},
    "outputs": [],
    "source": []
