--- a/notebooks/03.0_with_Regularization.ipynb
+++ b/notebooks/03.0_with_Regularization.ipynb
@@ -9,9 +9,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "876de47d-b473-464f-a855-afe91c1e04ba",
+   "metadata": {},
+   "source": [
+    "## implement and solve Vanishing / Exploding Gradients"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10cb9d3b-148c-49ff-ba63-65ca595634d1",
+   "id": "f38a37c3-0f92-404e-9659-fc1d4183905c",
    "metadata": {},
    "outputs": [],
    "source": []
