--- a/notebooks/03.1_L_layer_model_with_He_Initialization.ipynb
+++ b/notebooks/03.1_L_layer_model_with_He_Initialization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d08f3ad7-671e-4970-bcb3-b248a1c81cd2",
    "metadata": {},
    "outputs": [],
@@ -26,10 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e482b487-8f12-4fb4-8db3-088406fb05e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final X shape: (2612, 64, 64, 3)\n",
+      "Final X shape: (327, 64, 64, 3)\n",
+      "(12288, 2612) (1, 2612)\n",
+      "(12288, 327) (1, 327)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "TRAIN_XML = \"../EIDSeg_Dataset/data/train/train.xml\"\n",
@@ -66,22 +77,67 @@
    "id": "df1502b8-b4e9-4b40-bc62-cf885d645132",
    "metadata": {},
    "source": [
+    "## try with He Initialization\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e5434274-15dd-4b7b-94ef-60a76f267fb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_parameters_he(layers_dims):\n",
+    "    \"\"\"\n",
+    "    Arguments:\n",
+    "    layer_dims -- python array (list) containing the size of each layer.\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- python dictionary containing your parameters \"W1\", \"b1\", ..., \"WL\", \"bL\":\n",
+    "                    W1 -- weight matrix of shape (layers_dims[1], layers_dims[0])\n",
+    "                    b1 -- bias vector of shape (layers_dims[1], 1)\n",
+    "                    ...\n",
+    "                    WL -- weight matrix of shape (layers_dims[L], layers_dims[L-1])\n",
+    "                    bL -- bias vector of shape (layers_dims[L], 1)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    np.random.seed(3)\n",
+    "    parameters = {}\n",
+    "    L = len(layers_dims) - 1 # integer representing the number of layers\n",
+    "     \n",
+    "    for l in range(1, L + 1):\n",
+    "        #(≈ 2 lines of code)\n",
+    "        # parameters['W' + str(l)] = \n",
+    "        # parameters['b' + str(l)] =\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        parameters['W' + str(l)] = np.random.randn(layers_dims[l],layers_dims[l-1])*np.sqrt(2./layers_dims[l-1])\n",
+    "        parameters['b' + str(l)] = np.zeros((layers_dims[l],1))\n",
+    "        # YOUR CODE ENDS HERE\n",
+    "        \n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "899f9ac3-2f02-4abf-94b3-786a29b67c05",
+   "metadata": {},
+   "source": [
     "## L-layer Neural Network\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c44b91c2-5fde-4763-8b18-762c692907f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "layers_dims = [12288, 64, , 5, 1] "
+    "layers_dims = [12288, 20, 7, 5, 1] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c7e01ee3-f748-4d61-81aa-4539d5f61f1c",
    "metadata": {},
    "outputs": [],
@@ -108,8 +164,10 @@
     "    \n",
     "    # Parameters initialization.\n",
     "\n",
-    "    parameters = initialize_parameters_deep(layers_dims)\n",
-    "        \n",
+    "    #parameters = initialize_parameters_deep(layers_dims)\n",
+    "    parameters = initialize_parameters_he(layers_dims)    \n",
+    "\n",
+    "    \n",
     "    # Loop (gradient descent)\n",
     "    for i in range(0, num_iterations):\n",
     "\n",
@@ -137,31 +195,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a3bee3a3-d8b8-44e7-81b4-4c78633028e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 0: 0.630831367322515\n",
+      "Cost after iteration 100: 0.5836319288235235\n",
+      "Cost after iteration 200: 0.5705133220761593\n",
+      "Cost after iteration 300: 0.5598484707624054\n",
+      "Cost after iteration 400: 0.5497441521575789\n",
+      "Cost after iteration 500: 0.5403865494585717\n",
+      "Cost after iteration 600: 0.5324793933328509\n",
+      "Cost after iteration 700: 0.5222834897606259\n",
+      "Cost after iteration 800: 0.5119323279136482\n",
+      "Cost after iteration 900: 0.5023954375445786\n",
+      "Cost after iteration 1000: 0.49448971970050604\n",
+      "Cost after iteration 1100: 0.48762319360672135\n",
+      "Cost after iteration 1200: 0.4754437438932869\n",
+      "Cost after iteration 1300: 0.46351046337601165\n",
+      "Cost after iteration 1400: 0.46139507788646106\n",
+      "Cost after iteration 1500: 0.4440273817174804\n",
+      "Cost after iteration 1600: 0.44602558245324214\n",
+      "Cost after iteration 1700: 0.43780766058158754\n",
+      "Cost after iteration 1800: 0.42075597287920696\n",
+      "Cost after iteration 1900: 0.4366925115784739\n",
+      "Cost after iteration 2000: 0.39328563719708615\n",
+      "Cost after iteration 2100: 0.37667272294875587\n",
+      "Cost after iteration 2200: 0.36636241790872465\n",
+      "Cost after iteration 2300: 0.3698459736866064\n",
+      "Cost after iteration 2400: 0.4004603909740553\n",
+      "Cost after iteration 2500: 0.3243301415959512\n",
+      "Cost after iteration 2600: 0.33767609475162075\n",
+      "Cost after iteration 2700: 0.36672274121327914\n",
+      "Cost after iteration 2800: 0.29331218068828324\n",
+      "Cost after iteration 2900: 0.34521413188936184\n",
+      "Cost after iteration 3000: 0.34312525960561074\n",
+      "Cost after iteration 3100: 0.3580530386145671\n",
+      "Cost after iteration 3200: 0.42382174516498367\n",
+      "Cost after iteration 3300: 0.3781421319459169\n",
+      "Cost after iteration 3400: 0.2884525508719109\n",
+      "Cost after iteration 3499: 0.3854511647928985\n"
+     ]
+    }
+   ],
    "source": [
-    "layers_dims = [12288, 20, 7, 5, 1] \n",
     "parameters, costs = L_layer_model(train_x, Y_train_org, layers_dims,learning_rate = 0.008, num_iterations = 3500, print_cost = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "502dce65-6836-4d59-86b1-3a13752cf002",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7901990811638593\n"
+     ]
+    }
+   ],
    "source": [
     "pred_train = predict(train_x, Y_train_org, parameters)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "71e1e70e-835d-4248-bb71-c43abdf918c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7370030581039756\n"
+     ]
+    }
+   ],
    "source": [
     "pred_test = predict(test_x, Y_test_org, parameters)"
    ]
