tested with He Initialization

--- a/notebooks/03.1_L_layer_model_with_He_Initialization.ipynb
+++ b/notebooks/03.1_L_layer_model_with_He_Initialization.ipynb
@@ -283,9 +283,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20f69c85-82d0-430d-82b2-f822507c9af5",
+   "metadata": {},
+   "source": [
+    "## seems like there not much effect there must be something wrong"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aafb582-2ddf-4fa9-9a34-d978f819e590",
+   "id": "5a9d8432-2529-4564-8fb8-e81c02ec91ed",
    "metadata": {},
    "outputs": [],
    "source": []
