--- a/notebooks/03.0_with_Regularization.ipynb
+++ b/notebooks/03.0_with_Regularization.ipynb
@@ -22,7 +22,42 @@
    "id": "f38a37c3-0f92-404e-9659-fc1d4183905c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def compute_cost_with_regularization(A4, Y, parameters, lambd):\n",
+    "    \"\"\"\n",
+    "    Implement the cost function with L2 regularization.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    A4 -- output of forward propagation (last activation), shape (1, m)\n",
+    "    Y -- true labels, shape (1, m)\n",
+    "    parameters -- dictionary containing W1, W2, W3, W4\n",
+    "    lambd -- regularization parameter\n",
+    "    \n",
+    "    Returns:\n",
+    "    cost -- regularized cost\n",
+    "    \"\"\"\n",
+    "    m = Y.shape[1]\n",
+    "    \n",
+    "    W1 = parameters[\"W1\"]\n",
+    "    W2 = parameters[\"W2\"]\n",
+    "    W3 = parameters[\"W3\"]\n",
+    "    W4 = parameters[\"W4\"]\n",
+    "    \n",
+    "    # Cross-entropy cost\n",
+    "    cross_entropy_cost = compute_cost(A4, Y)\n",
+    "    \n",
+    "    # L2 regularization cost\n",
+    "    L2_regularization_cost = (lambd / (2 * m)) * (\n",
+    "        np.sum(np.square(W1)) +\n",
+    "        np.sum(np.square(W2)) +\n",
+    "        np.sum(np.square(W3)) +\n",
+    "        np.sum(np.square(W4))\n",
+    "    )\n",
+    "    \n",
+    "    cost = cross_entropy_cost + L2_regularization_cost\n",
+    "    \n",
+    "    return cost\n"
+   ]
   }
  ],
  "metadata": {
