--- a/notebooks/03.0_with_Regularization.ipynb
+++ b/notebooks/03.0_with_Regularization.ipynb
@@ -19,7 +19,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38a37c3-0f92-404e-9659-fc1d4183905c",
+   "id": "62c9ab78-5909-4376-8894-3805016a673e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dnn_structure import *\n",
+    "\n",
+    "import numpy as np\n",
+    "import sys\n",
+    "sys.path.append(\"../src\")\n",
+    "from Load_data.xml_utils import parse_cvat_xml_all_labels, label_Y_binary\n",
+    "from Load_data.data_loader import load_and_resize_images, build_label_array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97ef93b4-c5e8-407e-a027-1da54a071192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "TRAIN_XML = \"../EIDSeg_Dataset/data/train/train.xml\"\n",
+    "TEST_XML = \"../EIDSeg_Dataset/data/test/test.xml\"\n",
+    "TRAIN_IMAGES = \"../EIDSeg_Dataset/data/train/images/default\"\n",
+    "TEST_IMAGES = \"../EIDSeg_Dataset/data/test/images/default\"\n",
+    "\n",
+    "IMAGE_SIZE = (64, 64)\n",
+    "NUM_ITER = 2000\n",
+    "\n",
+    "\n",
+    "\n",
+    "labels_train_raw = parse_cvat_xml_all_labels(TRAIN_XML)\n",
+    "labels_test_raw = parse_cvat_xml_all_labels(TEST_XML)\n",
+    "\n",
+    "Y_train_map = label_Y_binary(labels_train_raw)\n",
+    "Y_test_map = label_Y_binary(labels_test_raw)\n",
+    "\n",
+    "X_train_org, ordered_train = load_and_resize_images(TRAIN_IMAGES, size=IMAGE_SIZE)\n",
+    "X_test_org, ordered_test = load_and_resize_images(TEST_IMAGES, size=IMAGE_SIZE)\n",
+    "\n",
+    "Y_train_org = build_label_array(ordered_train, Y_train_map)\n",
+    "Y_test_org = build_label_array(ordered_test, Y_test_map)\n",
+    "\n",
+    "train_x = X_train_org.reshape(X_train_org.shape[0], -1).T\n",
+    "test_x = X_test_org.reshape(X_test_org.shape[0], -1).T\n",
+    "\n",
+    "print(train_x.shape, Y_train_org.shape)\n",
+    "print(test_x.shape, Y_test_org.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19e03101-69b6-4313-af8c-4a211fcf0f73",
+   "metadata": {},
+   "source": [
+    "## L2 Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71a00cdc-e630-4a6b-ae9c-4631fafe8603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +118,67 @@
     "    cost = cross_entropy_cost + L2_regularization_cost\n",
     "    \n",
     "    return cost\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3663999-74aa-487f-90fe-ec2ad4b8e11c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backward_propagation_with_regularization(X, Y, cache, lambd):\n",
+    "    \"\"\"\n",
+    "    Implements backward propagation with L2 regularization\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- input data, shape (input size, m)\n",
+    "    Y -- true labels, shape (1, m)\n",
+    "    cache -- output from forward propagation\n",
+    "    lambd -- regularization parameter\n",
+    "    \n",
+    "    Returns:\n",
+    "    gradients -- dictionary of gradients\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    m = X.shape[1]\n",
+    "    \n",
+    "    (Z1, A1, W1, b1,\n",
+    "     Z2, A2, W2, b2,\n",
+    "     Z3, A3, W3, b3,\n",
+    "     Z4, A4, W4, b4) = cache\n",
+    "     \n",
+    "    # OUTPUT LAYER\n",
+    "    dZ4 = A4 - Y\n",
+    "    dW4 = 1./m * np.dot(dZ4, A3.T) + (lambd/m) * W4\n",
+    "    db4 = 1./m * np.sum(dZ4, axis=1, keepdims=True)\n",
+    "    \n",
+    "    # LAYER 3\n",
+    "    dA3 = np.dot(W4.T, dZ4)\n",
+    "    dZ3 = np.multiply(dA3, np.int64(A3 > 0))\n",
+    "    dW3 = 1./m * np.dot(dZ3, A2.T) + (lambd/m) * W3\n",
+    "    db3 = 1./m * np.sum(dZ3, axis=1, keepdims=True)\n",
+    "    \n",
+    "    # LAYER 2\n",
+    "    dA2 = np.dot(W3.T, dZ3)\n",
+    "    dZ2 = np.multiply(dA2, np.int64(A2 > 0))\n",
+    "    dW2 = 1./m * np.dot(dZ2, A1.T) + (lambd/m) * W2\n",
+    "    db2 = 1./m * np.sum(dZ2, axis=1, keepdims=True)\n",
+    "    \n",
+    "    # LAYER 1\n",
+    "    dA1 = np.dot(W2.T, dZ2)\n",
+    "    dZ1 = np.multiply(dA1, np.int64(A1 > 0))\n",
+    "    dW1 = 1./m * np.dot(dZ1, X.T) + (lambd/m) * W1\n",
+    "    db1 = 1./m * np.sum(dZ1, axis=1, keepdims=True)\n",
+    "    \n",
+    "    gradients = {\n",
+    "        \"dZ4\": dZ4, \"dW4\": dW4, \"db4\": db4,\n",
+    "        \"dA3\": dA3, \"dZ3\": dZ3, \"dW3\": dW3, \"db3\": db3,\n",
+    "        \"dA2\": dA2, \"dZ2\": dZ2, \"dW2\": dW2, \"db2\": db2,\n",
+    "        \"dA1\": dA1, \"dZ1\": dZ1, \"dW1\": dW1, \"db1\": db1\n",
+    "    }\n",
+    "    \n",
+    "    return gradients\n"
    ]
   }
  ],
