--- a/notebooks/03.2_with_Regularization.ipynb
+++ b/notebooks/03.2_with_Regularization.ipynb
@@ -5,21 +5,23 @@
    "id": "47ddf290-1054-484b-bed9-c2952870749b",
    "metadata": {},
    "source": [
-    "## as the last model has 0.934 train accuracy and 0.734 test accuracy it is clearly overfitting so I'll try regulazation first then drop out next"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "876de47d-b473-464f-a855-afe91c1e04ba",
-   "metadata": {},
-   "source": [
-    "## implement and solve Vanishing / Exploding Gradients"
+    "## as the last model has 0.934 train accuracy and 0.734 test accuracy it is clearly overfitting so I'll try regulazation "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "62c9ab78-5909-4376-8894-3805016a673e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dnn_structure import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9ee70d7-7e53-4d3d-b956-8b05b8eaff93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,36 +86,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_cost_with_regularization(A4, Y, parameters, lambd):\n",
+    "def compute_cost_with_regularization(AL, Y, parameters, lambd):\n",
     "    \"\"\"\n",
     "    Implement the cost function with L2 regularization.\n",
-    "    \n",
+    "\n",
     "    Arguments:\n",
-    "    A4 -- output of forward propagation (last activation), shape (1, m)\n",
-    "    Y -- true labels, shape (1, m)\n",
-    "    parameters -- dictionary containing W1, W2, W3, W4\n",
+    "    AL -- probability vector from forward propagation, shape (1, m)\n",
+    "    Y -- true labels vector, shape (1, m)\n",
+    "    parameters -- python dictionary containing W1...WL\n",
     "    lambd -- regularization parameter\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "    cost -- regularized cost\n",
     "    \"\"\"\n",
     "    m = Y.shape[1]\n",
     "    \n",
-    "    W1 = parameters[\"W1\"]\n",
-    "    W2 = parameters[\"W2\"]\n",
-    "    W3 = parameters[\"W3\"]\n",
-    "    W4 = parameters[\"W4\"]\n",
-    "    \n",
     "    # Cross-entropy cost\n",
-    "    cross_entropy_cost = compute_cost(A4, Y)\n",
-    "    \n",
+    "    cross_entropy_cost = compute_cost(AL, Y)\n",
+    "        \n",
     "    # L2 regularization cost\n",
-    "    L2_regularization_cost = (lambd / (2 * m)) * (\n",
-    "        np.sum(np.square(W1)) +\n",
-    "        np.sum(np.square(W2)) +\n",
-    "        np.sum(np.square(W3)) +\n",
-    "        np.sum(np.square(W4))\n",
-    "    )\n",
+    "    L2_regularization_cost = 0\n",
+    "    L = len(parameters) // 2  # number of layers\n",
+    "    \n",
+    "    for l in range(1, L + 1):\n",
+    "        L2_regularization_cost += np.sum(np.square(parameters[\"W\" + str(l)]))\n",
+    "    \n",
+    "    L2_regularization_cost *= (lambd / (2 * m))\n",
     "    \n",
     "    cost = cross_entropy_cost + L2_regularization_cost\n",
     "    \n",
@@ -127,58 +125,126 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def backward_propagation_with_regularization(X, Y, cache, lambd):\n",
+    "def L_model_backward_with_regularization(AL, Y, caches, lambd):\n",
     "    \"\"\"\n",
-    "    Implements backward propagation with L2 regularization\n",
+    "    Implement backward propagation with L2 regularization for [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID\n",
     "    \n",
     "    Arguments:\n",
-    "    X -- input data, shape (input size, m)\n",
-    "    Y -- true labels, shape (1, m)\n",
-    "    cache -- output from forward propagation\n",
+    "    AL -- probability vector, output of forward propagation (1, m)\n",
+    "    Y -- true labels vector (1, m)\n",
+    "    caches -- list of caches from L_model_forward\n",
     "    lambd -- regularization parameter\n",
     "    \n",
     "    Returns:\n",
-    "    gradients -- dictionary of gradients\n",
+    "    grads -- dictionary with gradients\n",
     "    \"\"\"\n",
     "    \n",
-    "    m = X.shape[1]\n",
+    "    grads = {}\n",
+    "    L = len(caches)           # number of layers\n",
+    "    m = AL.shape[1]\n",
+    "    Y = Y.reshape(AL.shape)\n",
     "    \n",
-    "    (Z1, A1, W1, b1,\n",
-    "     Z2, A2, W2, b2,\n",
-    "     Z3, A3, W3, b3,\n",
-    "     Z4, A4, W4, b4) = cache\n",
-    "     \n",
-    "    # OUTPUT LAYER\n",
-    "    dZ4 = A4 - Y\n",
-    "    dW4 = 1./m * np.dot(dZ4, A3.T) + (lambd/m) * W4\n",
-    "    db4 = 1./m * np.sum(dZ4, axis=1, keepdims=True)\n",
+    "    # ---------- OUTPUT LAYER (SIGMOID) ----------\n",
+    "    current_cache = caches[L - 1]\n",
     "    \n",
-    "    # LAYER 3\n",
-    "    dA3 = np.dot(W4.T, dZ4)\n",
-    "    dZ3 = np.multiply(dA3, np.int64(A3 > 0))\n",
-    "    dW3 = 1./m * np.dot(dZ3, A2.T) + (lambd/m) * W3\n",
-    "    db3 = 1./m * np.sum(dZ3, axis=1, keepdims=True)\n",
+    "    dAL = - (np.divide(Y, AL) - np.divide(1 - Y, 1 - AL))\n",
     "    \n",
-    "    # LAYER 2\n",
-    "    dA2 = np.dot(W3.T, dZ3)\n",
-    "    dZ2 = np.multiply(dA2, np.int64(A2 > 0))\n",
-    "    dW2 = 1./m * np.dot(dZ2, A1.T) + (lambd/m) * W2\n",
-    "    db2 = 1./m * np.sum(dZ2, axis=1, keepdims=True)\n",
+    "    dA_prev, dW, db = linear_activation_backward(\n",
+    "        dAL, current_cache, activation=\"sigmoid\"\n",
+    "    )\n",
     "    \n",
-    "    # LAYER 1\n",
-    "    dA1 = np.dot(W2.T, dZ2)\n",
-    "    dZ1 = np.multiply(dA1, np.int64(A1 > 0))\n",
-    "    dW1 = 1./m * np.dot(dZ1, X.T) + (lambd/m) * W1\n",
-    "    db1 = 1./m * np.sum(dZ1, axis=1, keepdims=True)\n",
+    "    grads[\"dW\" + str(L)] = dW + (lambd / m) * current_cache[0][1]\n",
+    "    grads[\"db\" + str(L)] = db\n",
+    "    grads[\"dA\" + str(L - 1)] = dA_prev\n",
     "    \n",
-    "    gradients = {\n",
-    "        \"dZ4\": dZ4, \"dW4\": dW4, \"db4\": db4,\n",
-    "        \"dA3\": dA3, \"dZ3\": dZ3, \"dW3\": dW3, \"db3\": db3,\n",
-    "        \"dA2\": dA2, \"dZ2\": dZ2, \"dW2\": dW2, \"db2\": db2,\n",
-    "        \"dA1\": dA1, \"dZ1\": dZ1, \"dW1\": dW1, \"db1\": db1\n",
-    "    }\n",
+    "    # ---------- HIDDEN LAYERS (RELU) ----------\n",
+    "    for l in reversed(range(L - 1)):\n",
+    "        current_cache = caches[l]\n",
+    "        \n",
+    "        dA_prev, dW, db = linear_activation_backward(\n",
+    "            grads[\"dA\" + str(l + 1)], current_cache, activation=\"relu\"\n",
+    "        )\n",
+    "        \n",
+    "        grads[\"dW\" + str(l + 1)] = dW + (lambd / m) * current_cache[0][1]\n",
+    "        grads[\"db\" + str(l + 1)] = db\n",
+    "        grads[\"dA\" + str(l)] = dA_prev\n",
     "    \n",
-    "    return gradients\n"
+    "    return grads\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54a5b893-9de9-4a56-a5f9-2d24e4c082da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def L_layer_model(X, Y, layers_dims, learning_rate = 0.0075, num_iterations = 3000, print_cost=False):\n",
+    "    \"\"\"\n",
+    "    Implements a L-layer neural network: [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- input data, of shape (n_x, number of examples)\n",
+    "    Y -- true \"label\" vector (containing 1 if cat, 0 if non-cat), of shape (1, number of examples)\n",
+    "    layers_dims -- list containing the input size and each layer size, of length (number of layers + 1).\n",
+    "    learning_rate -- learning rate of the gradient descent update rule\n",
+    "    num_iterations -- number of iterations of the optimization loop\n",
+    "    print_cost -- if True, it prints the cost every 100 steps\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- parameters learnt by the model. They can then be used to predict.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    np.random.seed(1)\n",
+    "    costs = []                         # keep track of cost\n",
+    "    \n",
+    "    # Parameters initialization.\n",
+    "\n",
+    "    parameters = initialize_parameters_deep(layers_dims)\n",
+    "        \n",
+    "    # Loop (gradient descent)\n",
+    "    for i in range(0, num_iterations):\n",
+    "        # Forward propagation: [LINEAR -> RELU]*(L-1) -> LINEAR -> SIGMOID.\n",
+    "        AL, caches = L_model_forward(X, parameters)\n",
+    "                \n",
+    "        # Compute cost.\n",
+    "        cost = compute_cost_with_regularization(AL, Y, parameters, lambd=0.7)\n",
+    "            \n",
+    "        # Backward propagation.\n",
+    "        grads = L_model_backward_with_regularization(AL, Y, caches, lambd=0.7)\n",
+    "        \n",
+    "        # Update parameters.\n",
+    "\n",
+    "        parameters = update_parameters(parameters, grads, learning_rate)\n",
+    "                        \n",
+    "        # Print the cost every 100 iterations and for the last iteration\n",
+    "        if print_cost and (i % 100 == 0 or i == num_iterations - 1):\n",
+    "            print(\"Cost after iteration {}: {}\".format(i, np.squeeze(cost)))\n",
+    "        if i % 100 == 0:\n",
+    "            costs.append(cost)\n",
+    "    \n",
+    "    return parameters, costs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72e60ced-bd69-4c36-9349-be6fed00782d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layers_dims = [12288, 20, 7, 5, 1] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "708275a5-b436-4c95-a298-5c7cb1fc9728",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters, costs = L_layer_model(train_x, Y_train_org, layers_dims,learning_rate = 0.008, num_iterations = 3500, print_cost = True)"
    ]
   }
  ],
