--- a/notebooks/03.2_with_Regularization.ipynb
+++ b/notebooks/03.2_with_Regularization.ipynb
@@ -244,7 +244,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters, costs = L_layer_model(train_x, Y_train_org, layers_dims,learning_rate = 0.008, num_iterations = 3500, print_cost = True)"
+    "parameters, costs = L_layer_model(train_x, Y_train_org, layers_dims,learning_rate = 0.008, num_iterations = 2500, print_cost = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ddbe3a0-5dee-4558-92ad-43b2ab5ee03c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Train \")\n",
+    "pred_train = predict(train_x, Y_train_org, parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8c1d57a-28fb-4884-bb26-7858ba3f692a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Test \")\n",
+    "pred_test = predict(test_x, Y_test_org, parameters)"
    ]
   }
  ],
