run the model with 88/73 acuarcy (fail)

--- a/notebooks/03.2_with_Regularization.ipynb
+++ b/notebooks/03.2_with_Regularization.ipynb
@@ -5,12 +5,20 @@
    "id": "47ddf290-1054-484b-bed9-c2952870749b",
    "metadata": {},
    "source": [
+    "## Regularization implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c963040-ce2f-4e99-a06f-5de443e9e82c",
+   "metadata": {},
+   "source": [
     "## as the last model has 0.934 train accuracy and 0.734 test accuracy it is clearly overfitting so I'll try regulazation "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "62c9ab78-5909-4376-8894-3805016a673e",
    "metadata": {},
    "outputs": [],
@@ -20,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e9ee70d7-7e53-4d3d-b956-8b05b8eaff93",
    "metadata": {},
    "outputs": [],
@@ -36,10 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "97ef93b4-c5e8-407e-a027-1da54a071192",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final X shape: (2612, 64, 64, 3)\n",
+      "Final X shape: (327, 64, 64, 3)\n",
+      "(12288, 2612) (1, 2612)\n",
+      "(12288, 327) (1, 327)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "TRAIN_XML = \"../EIDSeg_Dataset/data/train/train.xml\"\n",
@@ -81,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "71a00cdc-e630-4a6b-ae9c-4631fafe8603",
    "metadata": {},
    "outputs": [],
@@ -120,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b3663999-74aa-487f-90fe-ec2ad4b8e11c",
    "metadata": {},
    "outputs": [],
@@ -174,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "54a5b893-9de9-4a56-a5f9-2d24e4c082da",
    "metadata": {},
    "outputs": [],
@@ -229,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "72e60ced-bd69-4c36-9349-be6fed00782d",
    "metadata": {},
    "outputs": [],
@@ -242,7 +261,39 @@
    "execution_count": null,
    "id": "708275a5-b436-4c95-a298-5c7cb1fc9728",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 0: 0.6410304710747363\n",
+      "Cost after iteration 100: 0.586803033336733\n",
+      "Cost after iteration 200: 0.5741942595156176\n",
+      "Cost after iteration 300: 0.5629472112636561\n",
+      "Cost after iteration 400: 0.5509137611305737\n",
+      "Cost after iteration 500: 0.546096911936463\n",
+      "Cost after iteration 600: 0.5561015052317162\n",
+      "Cost after iteration 700: 0.556646568740138\n",
+      "Cost after iteration 800: 0.508077258313822\n",
+      "Cost after iteration 900: 0.5318630701756232\n",
+      "Cost after iteration 1000: 0.5364223260704696\n",
+      "Cost after iteration 1100: 0.4878538594194488\n",
+      "Cost after iteration 1200: 0.5020502195878389\n",
+      "Cost after iteration 1300: 0.46563747685117773\n",
+      "Cost after iteration 1400: 0.5735516836228417\n",
+      "Cost after iteration 1500: 0.5110832967759995\n",
+      "Cost after iteration 1600: 0.550012855071105\n",
+      "Cost after iteration 1700: 0.49521130767997174\n",
+      "Cost after iteration 1800: 0.39745782304366384\n",
+      "Cost after iteration 1900: 0.3552972965249967\n",
+      "Cost after iteration 2000: 0.3488799321558218\n",
+      "Cost after iteration 2100: 0.3581246733743039\n",
+      "Cost after iteration 2200: 0.5148973001845198\n",
+      "Cost after iteration 2300: 0.4025817913939815\n",
+      "Cost after iteration 2400: 0.34574184245441547\n"
+     ]
+    }
+   ],
    "source": [
     "parameters, costs = L_layer_model(train_x, Y_train_org, layers_dims,learning_rate = 0.008, num_iterations = 2500, print_cost = True)"
    ]
