implement latest Optimization methode in 4_Optimized_Model.ipynb

--- a/notebooks/03.2_with_Regularization.ipynb
+++ b/notebooks/03.2_with_Regularization.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "708275a5-b436-4c95-a298-5c7cb1fc9728",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,8 @@
       "Cost after iteration 2100: 0.3581246733743039\n",
       "Cost after iteration 2200: 0.5148973001845198\n",
       "Cost after iteration 2300: 0.4025817913939815\n",
-      "Cost after iteration 2400: 0.34574184245441547\n"
+      "Cost after iteration 2400: 0.34574184245441547\n",
+      "Cost after iteration 2499: 0.3032853179759494\n"
      ]
     }
    ],
@@ -300,10 +301,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4ddbe3a0-5dee-4558-92ad-43b2ab5ee03c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train \n",
+      "Accuracy: 0.8843797856049007\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Train \")\n",
     "pred_train = predict(train_x, Y_train_org, parameters)"
@@ -311,10 +321,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d8c1d57a-28fb-4884-bb26-7858ba3f692a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test \n",
+      "Accuracy: 0.7370030581039756\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test \")\n",
     "pred_test = predict(test_x, Y_test_org, parameters)"
