--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -1,6 +1,64 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "b6b3844f-830f-43b3-94bb-170667d966f5",
+   "metadata": {},
+   "source": [
+    "## Optimized Model: Rethinking the Pipeline\n",
+    "\n",
+    "In the previous notebooks, I implemented multiple models of increasing complexity, ranging from logistic regression to deeper neural networks. While these experiments were valuable for understanding core concepts in machine learning and deep learning, the resulting performance remained relatively low and inconsistent.\n",
+    "\n",
+    "After analyzing the results more carefully, it became clear that the limitation was not only related to model architecture or optimization techniques, but also to **how the data was labeled and interpreted**.\n",
+    "\n",
+    "### Identified Issue with Data Labeling\n",
+    "\n",
+    "In the earlier approach, an image was classified as *damaged* if **any single polygon** within the image was labeled as `D_Building` or `Debris`. This means that even a small, localized damaged region could cause the entire image to be labeled as damaged.  \n",
+    "Such a strategy likely introduces noise and label ambiguity, especially for images that are largely intact but contain minor damage.\n",
+    "\n",
+    "This coarse labeling scheme may prevent the model from learning meaningful visual patterns related to *overall structural damage*, which is the core objective of this project.\n",
+    "\n",
+    "### Objective of This Notebook\n",
+    "\n",
+    "In this notebook, I aim to build the **most optimized model so far**, not only by:\n",
+    "- improving model architecture,\n",
+    "- applying better initialization, regularization, and optimization techniques,\n",
+    "\n",
+    "but also by **revisiting and refining the data labeling strategy itself**.\n",
+    "\n",
+    "By aligning the labels more closely with the true semantic meaning of structural damage, the goal is to provide the model with cleaner supervision and enable more reliable learning.\n",
+    "\n",
+    "This step marks a transition from experimenting with models to **systematically improving the full machine learning pipeline**, from data understanding to final evaluation.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bae27b1-943d-4ae1-9265-cfbed5fd3061",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
