run the notebok

--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1bae27b1-943d-4ae1-9265-cfbed5fd3061",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6a878f14-ca9b-4775-9e4e-e8f397de9b97",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1db2731a-ff51-4c42-af82-e35eaaf26b21",
    "metadata": {},
    "outputs": [],
@@ -234,10 +234,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2c867baa-be67-47fc-b762-59fcf6120a30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final X shape: (2612, 64, 64, 3)\n",
+      "Final X shape: (327, 64, 64, 3)\n",
+      "Train positive ratio: 0.6450995405819295 n_train: 2612\n",
+      "Test  positive ratio: 0.6972477064220184 n_test: 327\n"
+     ]
+    }
+   ],
    "source": [
     "labels_train = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/train/train.xml\", min_coverage=0.15)\n",
     "labels_test  = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/test/test.xml\",  min_coverage=0.15)\n",
@@ -254,6 +265,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2d128233-0e35-43ce-bc87-9c19bc96fc91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12288, 2612) (1, 2612)\n",
+      "(12288, 327) (1, 327)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_x = X_train_org.reshape(X_train_org.shape[0], -1).T\n",
+    "train_y = Y_train_org.reshape(1,-1)\n",
+    "test_x = X_test_org.reshape(X_test_org.shape[0], -1).T\n",
+    "test_y = Y_test_org.reshape(1,-1)\n",
+    "\n",
+    "\n",
+    "print(train_x.shape, train_y.shape)\n",
+    "print(test_x.shape, test_y.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "514fcc2a-3384-4eff-bbd6-4b85621da148",
    "metadata": {
@@ -265,7 +302,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "id": "f4318264-c2de-4e4f-bd1e-cfef59dc909c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(Z):\n",
+    "    \"\"\"\n",
+    "    Implements the sigmoid activation in numpy\n",
+    "    \n",
+    "    Arguments:\n",
+    "    Z -- numpy array of any shape\n",
+    "    \n",
+    "    Returns:\n",
+    "    A -- output of sigmoid(z), same shape as Z\n",
+    "    cache -- returns Z as well, useful during backpropagation\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    A = 1/(1+np.exp(-Z))\n",
+    "    cache = Z\n",
+    "    \n",
+    "    return A, cache\n",
+    "\n",
+    "def relu(Z):\n",
+    "    \"\"\"\n",
+    "    Implement the RELU function.\n",
+    "\n",
+    "    Arguments:\n",
+    "    Z -- Output of the linear layer, of any shape\n",
+    "\n",
+    "    Returns:\n",
+    "    A -- Post-activation parameter, of the same shape as Z\n",
+    "    cache -- a python dictionary containing \"A\" ; stored for computing the backward pass efficiently\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    A = np.maximum(0,Z)\n",
+    "    \n",
+    "    assert(A.shape == Z.shape)\n",
+    "    \n",
+    "    cache = Z \n",
+    "    return A, cache\n",
+    "\n",
+    "\n",
+    "def relu_backward(dA, cache):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for a single RELU unit.\n",
+    "\n",
+    "    Arguments:\n",
+    "    dA -- post-activation gradient, of any shape\n",
+    "    cache -- 'Z' where we store for computing backward propagation efficiently\n",
+    "\n",
+    "    Returns:\n",
+    "    dZ -- Gradient of the cost with respect to Z\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    Z = cache\n",
+    "    dZ = np.array(dA, copy=True) # just converting dz to a correct object.\n",
+    "    \n",
+    "    # When z <= 0, you should set dz to 0 as well. \n",
+    "    dZ[Z <= 0] = 0\n",
+    "    \n",
+    "    assert (dZ.shape == Z.shape)\n",
+    "    \n",
+    "    return dZ\n",
+    "\n",
+    "def sigmoid_backward(dA, cache):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for a single SIGMOID unit.\n",
+    "\n",
+    "    Arguments:\n",
+    "    dA -- post-activation gradient, of any shape\n",
+    "    cache -- 'Z' where we store for computing backward propagation efficiently\n",
+    "\n",
+    "    Returns:\n",
+    "    dZ -- Gradient of the cost with respect to Z\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    Z = cache\n",
+    "    \n",
+    "    s = 1/(1+np.exp(-Z))\n",
+    "    dZ = dA * s * (1-s)\n",
+    "    \n",
+    "    assert (dZ.shape == Z.shape)\n",
+    "    \n",
+    "    return dZ\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "8fb6d114-bab9-4532-97e2-dda1b055a557",
    "metadata": {},
    "outputs": [],
@@ -299,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0e1414e3-b801-4df4-9096-34c5028fa255",
    "metadata": {},
    "outputs": [],
@@ -328,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1ac605c7-2b7f-4f18-a0b2-a1bc5ee31a93",
    "metadata": {},
    "outputs": [],
@@ -371,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0138577f-62a8-4f82-9fb6-aeecf57e1662",
    "metadata": {},
    "outputs": [],
@@ -412,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0492c074-eede-494c-8c2f-35b0ebe8e13a",
    "metadata": {},
    "outputs": [],
@@ -442,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "99acf980-6152-4f51-8707-80bd2e0479b4",
    "metadata": {},
    "outputs": [],
@@ -477,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1ace1016-db58-4957-a382-db20014e1d92",
    "metadata": {},
    "outputs": [],
@@ -514,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0e48e586-500e-4edf-b40f-b4b8b15dfad2",
    "metadata": {},
    "outputs": [],
@@ -562,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "74dfc553-78f5-4b0e-954b-29a82beeddf5",
    "metadata": {},
    "outputs": [],
@@ -593,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f58f82e1-f64a-491d-8d38-f439cf68d5fc",
    "metadata": {},
    "outputs": [],
@@ -644,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "6e746df3-1539-452d-b594-1c834d839d0f",
    "metadata": {},
    "outputs": [],
@@ -697,6 +823,55 @@
     "    \n",
     "    return parameters, costs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a809389d-254c-4202-a050-ed94ccb1512d",
+   "metadata": {},
+   "source": [
+    "## Training!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0439af21-1294-445d-8e22-50a53f36c9ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 0: 0.6610162410303447\n",
+      "Cost after iteration 100: 0.6251333151657736\n",
+      "Cost after iteration 200: 0.6181199417647691\n",
+      "Cost after iteration 300: 0.602018594708568\n",
+      "Cost after iteration 400: 0.5992725056053733\n",
+      "Cost after iteration 500: 0.5801487695859313\n",
+      "Cost after iteration 600: 0.5666420551668786\n",
+      "Cost after iteration 700: 0.5573108327088285\n",
+      "Cost after iteration 800: 0.5613805059008161\n",
+      "Cost after iteration 900: 0.5648790902689641\n",
+      "Cost after iteration 1000: 0.5464894748207613\n",
+      "Cost after iteration 1100: 0.534999961291748\n",
+      "Cost after iteration 1200: 0.6699157477336111\n",
+      "Cost after iteration 1300: 0.5356566961731746\n",
+      "Cost after iteration 1400: 0.4709198391911509\n"
+     ]
+    }
+   ],
+   "source": [
+    "layers_dims = [12288, 20, 7, 5, 1] \n",
+    "parameters, costs = L_layer_model(train_x, train_y, layers_dims,learning_rate = 0.009, num_iterations = 1500, print_cost = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05d8a8fb-fdd5-4aac-b7e5-4258d1e6a4cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
