--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -164,9 +164,7 @@
   {
    "cell_type": "markdown",
    "id": "826edf73-63a3-4e9e-818c-968e05beccb4",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Preparing the data "
    ]
@@ -244,14 +242,14 @@
      "text": [
       "Final X shape: (2612, 64, 64, 3)\n",
       "Final X shape: (327, 64, 64, 3)\n",
-      "Train positive ratio: 0.6450995405819295 n_train: 2612\n",
-      "Test  positive ratio: 0.6972477064220184 n_test: 327\n"
+      "Train positive ratio: 0.49119448698315465 n_train: 2612\n",
+      "Test  positive ratio: 0.5168195718654435 n_test: 327\n"
      ]
     }
    ],
    "source": [
-    "labels_train = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/train/train.xml\", min_coverage=0.15)\n",
-    "labels_test  = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/test/test.xml\",  min_coverage=0.15)\n",
+    "labels_train = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/train/train.xml\", min_coverage=0.3)\n",
+    "labels_test  = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/test/test.xml\",  min_coverage=0.3)\n",
     "\n",
     "X_train_org, ordered_filenames_train = load_and_resize_images(\"../EIDSeg_Dataset/data/train/images/default\", target_size=(64,64))\n",
     "X_test_org,  ordered_filenames_test  = load_and_resize_images(\"../EIDSeg_Dataset/data/test/images/default\",  target_size=(64,64))\n",
@@ -266,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "2d128233-0e35-43ce-bc87-9c19bc96fc91",
    "metadata": {},
    "outputs": [
@@ -302,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "f4318264-c2de-4e4f-bd1e-cfef59dc909c",
    "metadata": {},
    "outputs": [],
@@ -391,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "8fb6d114-bab9-4532-97e2-dda1b055a557",
    "metadata": {},
    "outputs": [],
@@ -425,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "0e1414e3-b801-4df4-9096-34c5028fa255",
    "metadata": {},
    "outputs": [],
@@ -454,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "1ac605c7-2b7f-4f18-a0b2-a1bc5ee31a93",
    "metadata": {},
    "outputs": [],
@@ -497,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "0138577f-62a8-4f82-9fb6-aeecf57e1662",
    "metadata": {},
    "outputs": [],
@@ -538,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0492c074-eede-494c-8c2f-35b0ebe8e13a",
    "metadata": {},
    "outputs": [],
@@ -568,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "99acf980-6152-4f51-8707-80bd2e0479b4",
    "metadata": {},
    "outputs": [],
@@ -603,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "1ace1016-db58-4957-a382-db20014e1d92",
    "metadata": {},
    "outputs": [],
@@ -640,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "0e48e586-500e-4edf-b40f-b4b8b15dfad2",
    "metadata": {},
    "outputs": [],
@@ -688,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "74dfc553-78f5-4b0e-954b-29a82beeddf5",
    "metadata": {},
    "outputs": [],
@@ -719,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "f58f82e1-f64a-491d-8d38-f439cf68d5fc",
    "metadata": {},
    "outputs": [],
@@ -770,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "6e746df3-1539-452d-b594-1c834d839d0f",
    "metadata": {},
    "outputs": [],
@@ -834,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0439af21-1294-445d-8e22-50a53f36c9ab",
    "metadata": {},
    "outputs": [
@@ -842,33 +840,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after iteration 0: 0.6610162410303447\n",
-      "Cost after iteration 100: 0.6251333151657736\n",
-      "Cost after iteration 200: 0.6181199417647691\n",
-      "Cost after iteration 300: 0.602018594708568\n",
-      "Cost after iteration 400: 0.5992725056053733\n",
-      "Cost after iteration 500: 0.5801487695859313\n",
-      "Cost after iteration 600: 0.5666420551668786\n",
-      "Cost after iteration 700: 0.5573108327088285\n",
-      "Cost after iteration 800: 0.5613805059008161\n",
-      "Cost after iteration 900: 0.5648790902689641\n",
-      "Cost after iteration 1000: 0.5464894748207613\n",
-      "Cost after iteration 1100: 0.534999961291748\n",
-      "Cost after iteration 1200: 0.6699157477336111\n",
-      "Cost after iteration 1300: 0.5356566961731746\n",
-      "Cost after iteration 1400: 0.4709198391911509\n"
+      "Cost after iteration 0: 0.7246250162012067\n",
+      "Cost after iteration 100: 0.6872203231761475\n",
+      "Cost after iteration 200: 0.6775461381963849\n",
+      "Cost after iteration 300: 0.6660236810493122\n",
+      "Cost after iteration 400: 0.675322633125315\n",
+      "Cost after iteration 500: 0.6539324891845053\n",
+      "Cost after iteration 600: 0.6572655245114436\n",
+      "Cost after iteration 700: 0.6285363185367053\n",
+      "Cost after iteration 800: 0.6369991025692343\n",
+      "Cost after iteration 900: 0.6473037728599877\n",
+      "Cost after iteration 1000: 0.5995318317603917\n",
+      "Cost after iteration 1100: 0.61476440088501\n",
+      "Cost after iteration 1200: 0.6015165843621063\n",
+      "Cost after iteration 1300: 0.5705049178075906\n",
+      "Cost after iteration 1400: 0.5649023718327169\n",
+      "Cost after iteration 1500: 0.5608144433536896\n",
+      "Cost after iteration 1600: 0.5818106456401206\n",
+      "Cost after iteration 1700: 0.6282697297242217\n",
+      "Cost after iteration 1800: 0.5505934307406615\n",
+      "Cost after iteration 1900: 0.5623603370943553\n",
+      "Cost after iteration 2000: 0.5638067592656174\n",
+      "Cost after iteration 2100: 0.5239095162844934\n",
+      "Cost after iteration 2200: 0.699562275389274\n",
+      "Cost after iteration 2300: 0.4850974434355157\n",
+      "Cost after iteration 2400: 0.5930385315473986\n",
+      "Cost after iteration 2499: 0.573857897708467\n"
      ]
     }
    ],
    "source": [
     "layers_dims = [12288, 20, 7, 5, 1] \n",
-    "parameters, costs = L_layer_model(train_x, train_y, layers_dims,learning_rate = 0.009, num_iterations = 1500, print_cost = True)"
+    "parameters, costs = L_layer_model(train_x, train_y, layers_dims,learning_rate = 0.009, num_iterations = 2500, print_cost = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "05d8a8fb-fdd5-4aac-b7e5-4258d1e6a4cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train :Accuracy: 0.8016845329249619\n",
+      "Test :Accuracy: 0.5382262996941896\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Train \", end= \":\")\n",
+    "pred_train = predict(train_x, Y_train_org, parameters)\n",
+    "print(\"Test \",end= \":\")\n",
+    "pred_test = predict(test_x, Y_test_org, parameters)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05d8a8fb-fdd5-4aac-b7e5-4258d1e6a4cd",
+   "id": "5dd80aa1-daf5-4417-a112-37a2e965aba2",
    "metadata": {},
    "outputs": [],
    "source": []
