added adam algorthim code

--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -1265,7 +1265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = predict(test_x, test_y, parameters)"
+    "predictions = predict(test_x, test_y, parameters)\n"
    ]
   }
  ],
